--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,8 @@
         </activity>
         <activity android:name=".MainActivity" />
         <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="ar.com.fcapps.controlprecioscuidados.fileprovider"
+            android:name=".GenericFileProvider"
+            android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
