--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="true" />
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <uses-permission android:name="android.permission.FLASHLIGHT" />
@@ -22,7 +20,8 @@
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListadoPrecios"></activity>
+        <activity android:name=".LectorCodigoDeBarras"></activity>
+        <activity android:name=".ListadoPrecios" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -38,8 +37,10 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/ADMOB_APP_ID" />
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="barcode" />
 
-        <activity android:name=".RecomendarApp" />
         <activity android:name=".About" />
         <activity android:name=".DenunciaTexto" />
         <activity android:name=".DenunciaFoto" />
