--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     //Codigo de Barras
-    implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
-    implementation 'uk.co.brightec.kbarcode:kbarcode:1.0.2'
+    //implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
+    //implementation 'uk.co.brightec.kbarcode:kbarcode:1.0.2'
+    implementation 'com.google.android.gms:play-services-vision:17.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
