--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     //implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
     //implementation 'uk.co.brightec.kbarcode:kbarcode:1.0.2'
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
+    implementation 'com.github.nisrulz:qreader:2.1.2'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
