--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,9 @@ dependencies {
     //implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
     //implementation 'uk.co.brightec.kbarcode:kbarcode:1.0.2'
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
-    implementation 'com.github.nisrulz:qreader:2.1.2'
+    //implementation 'com.github.nisrulz:qreader:2.1.2'
+    implementation 'com.edwardvanraak:MaterialBarcodeScanner:0.0.6-ALPHA'
+
 
 }
 
